@@ -30,12 +30,16 @@ protected:
    FiniteElementSpace *fes;
 
    /** @brief Extension for supporting different assembly levels. */
-   LinearFormExtension *ext;
+   LinearFormExtension *ext = nullptr;
+
+   /// @brief Should we use the device-compatible fast assembly algorithm (false
+   /// by default)
+   bool fast_assembly = false;
 
    /** @brief Indicates the LinearFormIntegrator%s stored in #domain_integs,
        #domain_delta_integs, #boundary_integs, and #boundary_face_integs are
        owned by another LinearForm. */
-   int extern_lfs;
+   int extern_lfs = 0;
 
    /// Set of Domain Integrators to be applied.
    Array<LinearFormIntegrator*> domain_integs;
@@ -82,7 +86,7 @@ public:
    /// Creates linear form associated with FE space @a *f.
    /** The pointer @a f is not owned by the newly constructed object. */
    LinearForm(FiniteElementSpace *f) : Vector(f->GetVSize())
-   { fes = f; ext = nullptr; extern_lfs = 0; UseDevice(true); }
+   { fes = f; UseDevice(true); }
 
    /** @brief Create a LinearForm on the FiniteElementSpace @a f, using the
        same integrators as the LinearForm @a lf.
@@ -97,7 +101,8 @@ public:
    /** The associated FiniteElementSpace can be set later using one of the
        methods: Update(FiniteElementSpace *) or
        Update(FiniteElementSpace *, Vector &, int). */
-   LinearForm() { fes = NULL; ext = nullptr; extern_lfs = 0; UseDevice(true); }
+   LinearForm()
+   { fes = NULL; UseDevice(true); }
 
    /// Construct a LinearForm using previously allocated array @a data.
    /** The LinearForm does not assume ownership of @a data which is assumed to
@@ -105,7 +110,7 @@ public:
        for externally allocated array, the pointer @a data can be NULL. The data
        array can be replaced later using the method SetData(). */
    LinearForm(FiniteElementSpace *f, double *data) : Vector(data, f->GetVSize())
-   { fes = f; ext = nullptr; extern_lfs = 0; }
+   { fes = f; }
 
    /// Copy assignment. Only the data of the base class Vector is copied.
    /** It is assumed that this object and @a rhs use FiniteElementSpace%s that
@@ -185,13 +190,20 @@ public:
        corresponding pointer (to Array<int>) will be NULL. */
    Array<Array<int>*> *GetFLFI_Marker() { return &boundary_face_integs_marker; }
 
+   /// @brief Which assembly algorithm to use: the new device-compatible fast
+   /// assembly (true), or the legacy CPU-only algorithm (false).
+   /** If not set, the default value is false.  If used, this method must be
+       called before assembly. */
+   void UseFastAssembly(bool use_fa);
+
    /// Assembles the linear form i.e. sums over all domain/bdr integrators.
-   /// When @a use_device is set to true and the linearform assembly is
-   /// compatible with device execution, it will be executed on the device.
-   void Assemble(bool use_device = true);
+   /** When @ref UseFastAssembly "UseFastAssembly(true)" has been called and the
+       linearform assembly is compatible with device execution, it will be
+       executed on the device. */
+   void Assemble();
 
    /// Return true if assembly on device is supported, false otherwise.
-   bool SupportsDevice();
+   virtual bool SupportsDevice();
 
    /// Assembles delta functions of the linear form
    void AssembleDelta();
