@@ -114,9 +114,13 @@ public:
    void MakeRef(ParFiniteElementSpace *pf, Vector &v, int v_offset);
 
    /// Assembles the ParLinearForm i.e. sums over all domain/bdr integrators.
-   /// When @a use_device is set to true and all the ParLinearForm assembly is
-   /// compatible with device execution, it will be executed on the device.
-   void Assemble(bool use_device = true);
+   /** When @ref LinearForm::UseFastAssembly "UseFastAssembly(true)" has been
+       called and the linear form assembly is compatible with device execution,
+       the assembly will be executed on the device. */
+   void Assemble();
+
+   /// Return true if assembly on device is supported, false otherwise.
+   virtual bool SupportsDevice();
 
    void AssembleSharedFaces();
 
